examples/test/testpolicy16048.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16048
  namespace: namespace102
spec:
  podSelector:
    matchLabels:
      key48: value27
      key14: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value31
      podSelector:
        matchLabels:
          key48: value10
          key35: value20
